err/remote-microscope.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mems'...
Listing './lib/python3.5/site-packages/mems/instrument'...
Listing './lib/python3.5/site-packages/mems/instrument/hardware'...
Compiling './lib/python3.5/site-packages/mems/instrument/hardware/leica.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/hardware/leica.py", line 68
    raise InstrumentException, 'Unknown scope command: '+repr(s)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mems/instrument/hardware/secs_i.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (secs_i.py, line 65)
Compiling './lib/python3.5/site-packages/mems/instrument/hardware/serial_port.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (serial_port.py, line 20)
Compiling './lib/python3.5/site-packages/mems/instrument/protocols.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (protocols.py, line 65)
Listing './lib/python3.5/site-packages/mems/instrument/server'...
Compiling './lib/python3.5/site-packages/mems/instrument/server/camera.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/server/camera.py", line 94
    raise NotImplementedError, 'subclass must implement'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mems/instrument/server/configuration.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/server/configuration.py", line 61
    raise IOError, "Configuration file '%s' not found" % filename
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mems/instrument/server/dmc.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/server/dmc.py", line 67
    print '** unsupported DMC size', (x, y)
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mems/instrument/server/layout.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/server/layout.py", line 24
    print 'parsing CIF file'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mems/instrument/server/network_server.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/server/network_server.py", line 89
    raise RuntimeError, ("%s: Unknown FIFO command %r args=%r"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mems/instrument/server/options.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/server/options.py", line 50
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mems/instrument/server/process_controller.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/server/process_controller.py", line 106
    os.makedirs(root_dir, mode=0755)
                                  ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/mems/instrument/server/pxc_200.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/server/pxc_200.py", line 68
    except os.error, (errno, msg):
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mems/instrument/server/state.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/server/state.py", line 192
    except xmlrpclib.Fault, exc:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mems/instrument/server/util.py'...
***   File "./lib/python3.5/site-packages/mems/instrument/server/util.py", line 43
    except os.error, (errnum, errmsg):
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/remote_microscope-2.0a3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
